--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "keywords": [
     "fiat",
-    "ramp",
-    "on",
-    "off",
+    "cover",
+    "portfolio",
+    "loss coverage",
     "cryptocurrency"
   ],
   "author": "dRisk",
